--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 include(01/CMakeLists.txt)
 include(02/CMakeLists.txt)
+include(03/CMakeLists.txt)
 
 #add_executable(imooc main.cpp 01/main.cpp)
 #target_link_libraries(imooc SDL2)
