--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include(01/CMakeLists.txt)
 include(02/CMakeLists.txt)
 include(03/CMakeLists.txt)
 include(04/CMakeLists.txt)
+include(05/CMakeLists.txt)
 
 #add_executable(imooc main.cpp 01/main.cpp)
 #target_link_libraries(imooc SDL2)
