--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include(02/CMakeLists.txt)
 include(03/CMakeLists.txt)
 include(04/CMakeLists.txt)
 include(05/CMakeLists.txt)
+include(06/CMakeLists.txt)
 
 #add_executable(imooc main.cpp 01/main.cpp)
 #target_link_libraries(imooc SDL2)
