--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(imooc)
+project(SDL2-Study)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -13,6 +13,4 @@ include(07/CMakeLists.txt)
 include(08/CMakeLists.txt)
 include(09/CMakeLists.txt)
 include(10/CMakeLists.txt)
-
-#add_executable(imooc main.cpp 01/main.cpp)
-#target_link_libraries(imooc SDL2)
+include(11/CMakeLists.txt)
