--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ include(08/CMakeLists.txt)
 include(09/CMakeLists.txt)
 include(10/CMakeLists.txt)
 include(11/CMakeLists.txt)
+include(12/CMakeLists.txt)
