--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ include(09/CMakeLists.txt)
 include(10/CMakeLists.txt)
 include(11/CMakeLists.txt)
 include(12/CMakeLists.txt)
+include(13/CMakeLists.txt)
