Add 14-Animated Sprites and Vsync

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ include(10/CMakeLists.txt)
 include(11/CMakeLists.txt)
 include(12/CMakeLists.txt)
 include(13/CMakeLists.txt)
+include(14/CMakeLists.txt)
